--- a/s3bkt_creation01.yaml
+++ b/s3bkt_creation01.yaml
@@ -1,12 +1,22 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: CloudFormation template for s3 bucket 
-    
+Description: CloudFormation template for s3 bucket
 Resources:
   S3Bucket:
-    Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
+    Type: 'AWS::S3::Bucket'
     Description: Creating Amazon S3 bucket from CloudFormation
     Properties:
-      BucketName: i-named-this-bucket
+      BucketName: vnkt-bkt-2020
+      AccessControl: Private
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
       VersioningConfiguration:
         Status: Enabled
 Outputs:
